--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ body {
     font-size: 18px;
     line-height: 28px;
     color: var(--text-color);
+    overflow-x: hidden;
 }
 
 img {
@@ -249,6 +250,7 @@ a {
     background-color: var(--color-white);
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     border-radius: 15px;
     margin-left: 30px;
     margin-bottom: 80px;
