--- a/css/main.css
+++ b/css/main.css
@@ -420,6 +420,15 @@ svg {
 @media only screen and (max-width: 710px) {
     .hero__img-wrapper {
         margin-right: 0;
+        margin-top: 30px;
+    }
+
+    .hero__heading {
+        margin-bottom: 25px;
+    }
+
+    .hero__main-text {
+        margin-bottom: 24px;
     }
 
     .hero__course {
